GNOME Bugzilla – Bug 666445
Does not show selected drive
Last modified: 2013-08-09 17:28:37 UTC
Created attachment 203780 [details] Screenshot When trying to burn an .iso-Image to a CD, and clicking on the lower (empty) drop-down box I can select the drive and burn the CD but Brasero does not show the selected drive/medium in the drop-down box but leaves it empty. Same problem in main brasero window when trying to burn any type of medium.
Can you please run brasero --debug &> ~/brasero.txt Afterwards there will be a file called brasero.txt in your home / user directory. Please attach it here.
This just gives me a file containing one line: "Please use »braesero --help« to see available options«. Using Ubuntu 11.10. Maybe this option is not available in the Ubuntu package? Couldn't find any debug-package either.
The current git version is still affected by this bug. Neither my drive nor the image gets selected in the ComboBox, only the tooltip shows that the selection has been changed (see new screenshot). The bug is only visual, burning works as expected.
Created attachment 207998 [details] Bug
This might be the same as bug 662541, but that one should be fixed.
Fix pushed to master and the gnome-3-8 branch https://git.gnome.org/browse/brasero/commit/?id=521eda1a5fb77fe2d494366a6b7ee7c85d2044e4