brasero-dest-selection: populate model after construction

As Jonh did for brasero-drive-selection in 4cdec3b2, move model population
from init to construction to resolve an issue in drawing.

https://bugzilla.gnome.org/show_bug.cgi?id=666445